include/snarl.h

/* Opaque runtime types */
typedef struct slop_arena slop_arena;
/* Runtime value types */
typedef struct { size_t len; const char* data; } slop_string;
typedef struct { bool has_value; slop_string value; } slop_option_string;
typedef int64_t rdf_BlankNodeId;
struct rdf_BlankNode {
    rdf_BlankNodeId id;
};
typedef struct rdf_BlankNode rdf_BlankNode;
struct rdf_IRI {
    slop_string value;
};
typedef struct rdf_IRI rdf_IRI;
struct rdf_Literal {
    slop_string value;
    slop_option_string datatype;
    slop_option_string lang;
};
typedef struct rdf_Literal rdf_Literal;
typedef enum {
    rdf_Term_term_iri,
    rdf_Term_term_blank,
    rdf_Term_term_literal,
    rdf_Term_term_triple
} rdf_Term_tag;
struct types_ValidatorConfig {
    uint8_t verbose;
    int64_t max_errors;
    uint8_t include_warnings;
    uint8_t include_infos;
};
typedef struct types_ValidatorConfig types_ValidatorConfig;
struct data_graph_SnarlDataGraph {
    slop_list_rdf_Triple triples;
    data_graph_SnarlDataIndex index;
    int64_t size;
};
typedef struct data_graph_SnarlDataGraph data_graph_SnarlDataGraph;
struct index_IndexedGraph {
    slop_list_rdf_Triple triples;
    index_TripleIndex index;
    int64_t size;
};
typedef struct index_IndexedGraph index_IndexedGraph;
struct rdf_Term {
    rdf_Term_tag tag;
    union {
        rdf_IRI term_iri;
        rdf_BlankNode term_blank;
        rdf_Literal term_literal;
        rdf_Triple* term_triple;
    } data;
};
typedef struct rdf_Term rdf_Term;
struct rdf_Triple {
    rdf_Term subject;
    rdf_Term predicate;
    rdf_Term object;
};
typedef struct rdf_Triple rdf_Triple;
typedef struct { size_t len; size_t cap; rdf_Term* data; } slop_list_rdf_Term;
typedef struct { size_t len; size_t cap; rdf_Triple* data; } slop_list_rdf_Triple;
typedef struct { size_t len; size_t cap; types_ValidationResult* data; } slop_list_types_ValidationResult;
typedef struct { bool has_value; rdf_Term value; } slop_option_rdf_Term;
struct types_ShaclPath {
    types_ShaclPath_tag tag;
    union {
        rdf_Term path_predicate;
        slop_list_types_ShaclPath path_sequence;
        slop_list_types_ShaclPath path_alternative;
        types_ShaclPath* path_inverse;
        types_ShaclPath* path_zero_or_more;
        types_ShaclPath* path_one_or_more;
        types_ShaclPath* path_zero_or_one;
    } data;
};
typedef struct types_ShaclPath types_ShaclPath;
struct types_ValidationReport {
    uint8_t conforms;
    slop_list_types_ValidationResult results;
};
typedef struct types_ValidationReport types_ValidationReport;
struct types_ValidatorResult {
    types_ValidatorResult_tag tag;
    union {
        types_ValidationReport validate_success;
        slop_string validate_error;
    } data;
};
typedef struct types_ValidatorResult types_ValidatorResult;
index_IndexedGraph rdf_indexed_graph_add(slop_arena* arena, index_IndexedGraph g, rdf_Triple t);
uint8_t rdf_indexed_graph_contains(index_IndexedGraph g, rdf_Triple t);
index_IndexedGraph rdf_indexed_graph_create(slop_arena* arena);
slop_list_rdf_Triple rdf_indexed_graph_match(slop_arena* arena, index_IndexedGraph g, slop_option_rdf_Term subj, slop_option_rdf_Term pred, slop_option_rdf_Term obj);
slop_list_rdf_Term rdf_indexed_graph_objects(slop_arena* arena, index_IndexedGraph g, rdf_Term subj, rdf_Term pred);
int64_t rdf_indexed_graph_size(index_IndexedGraph g);
slop_list_rdf_Term rdf_indexed_graph_subjects(slop_arena* arena, index_IndexedGraph g, rdf_Term pred, rdf_Term obj);
rdf_Term rdf_make_blank(slop_arena* arena, rdf_BlankNodeId id);
rdf_Term rdf_make_iri(slop_arena* arena, slop_string value);
rdf_Term rdf_make_literal(slop_arena* arena, slop_string value, slop_option_string datatype, slop_option_string lang);
rdf_Triple rdf_make_triple(slop_arena* arena, rdf_Term subject, rdf_Term predicate, rdf_Term object);
uint8_t rdf_term_eq(rdf_Term a, rdf_Term b);
uint8_t snarl_conforms(slop_arena* arena, index_IndexedGraph data_graph, index_IndexedGraph shapes_graph);
uint8_t snarl_conforms_data_graph(slop_arena* arena, data_graph_SnarlDataGraph data_graph, index_IndexedGraph shapes_graph);
data_graph_SnarlDataGraph snarl_data_graph_add(slop_arena* arena, data_graph_SnarlDataGraph g, rdf_Triple t);
uint8_t snarl_data_graph_contains(data_graph_SnarlDataGraph g, rdf_Triple t);
data_graph_SnarlDataGraph snarl_data_graph_create(slop_arena* arena);
data_graph_SnarlDataGraph snarl_data_graph_from_indexed(slop_arena* arena, index_IndexedGraph g);
int64_t snarl_data_graph_size(data_graph_SnarlDataGraph g);
index_IndexedGraph snarl_data_graph_to_indexed(slop_arena* arena, data_graph_SnarlDataGraph g);
types_ValidatorConfig snarl_default_config(void);
int64_t snarl_get_result_count(types_ValidationReport report);
slop_list_types_ValidationResult snarl_get_violations(slop_arena* arena, types_ValidationReport report);
slop_list_types_ValidationResult snarl_get_warnings(slop_arena* arena, types_ValidationReport report);
slop_string snarl_path_to_display_string(slop_arena* arena, types_ShaclPath p);
index_IndexedGraph snarl_report_to_graph(slop_arena* arena, types_ValidationReport report);
slop_string snarl_report_to_string(slop_arena* arena, types_ValidationReport report);
types_ValidatorResult snarl_validate(slop_arena* arena, index_IndexedGraph data_graph, index_IndexedGraph shapes_graph);
types_ValidatorResult snarl_validate_data_graph(slop_arena* arena, data_graph_SnarlDataGraph data_graph, index_IndexedGraph shapes_graph);
types_ValidatorResult snarl_validate_data_graph_with_config(slop_arena* arena, data_graph_SnarlDataGraph data_graph, index_IndexedGraph shapes_graph, types_ValidatorConfig config);
types_ValidatorResult snarl_validate_with_config(slop_arena* arena, index_IndexedGraph data_graph, index_IndexedGraph shapes_graph, types_ValidatorConfig config);